Fixing paths to scripts.

--- a/BotControl.html
+++ b/BotControl.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!-- saved from url=(0037)http://localhost:6658/home/BotControl -->
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0,">
     <title></title>
-    <link href="./BotControl_files/BotControl.css" rel="stylesheet">
+    <link href="./BotControl.css" rel="stylesheet">
     </head>
     <body data-feedly-mini="yes">
         <div id="videos">
@@ -19,20 +18,20 @@
             </div>
 
         </div>
-        <script src="./BotControl_files/adapter.js"></script>
-        <script src="./BotControl_files/jquery-1.10.2.js"></script>
-        <script src="./BotControl_files/jquery.signalR-2.2.0.js"></script>
+        <script src="./adapter.js"></script>
+        <script src="./jquery-1.10.2.js"></script>
+        <script src="./jquery.signalR-2.2.0.js"></script>
 
-        <script src="./BotControl_files/Vector2.js"></script>
-        <script src="./BotControl_files/victor.min.js"></script>
-        <script src="./BotControl_files/VectorFacade.js"></script>
+        <script src="./Vector2.js"></script>
+        <script src="./victor.min.js"></script>
+        <script src="./VectorFacade.js"></script>
 
 
         <!-- App JS -->
-        <script src="./BotControl_files/viewModel.js"></script>
-        <script src="./BotControl_files/connectionManager.js"></script>
+        <script src="./viewModel.js"></script>
+        <script src="./connectionManager.js"></script>
 
-        <script src="./BotControl_files/BotControl.js"></script>
+        <script src="./BotControl.js"></script>
 
         <div class="container">
             <canvas width="1067" height="920"></canvas>
