config.js, gitignore changes, logging

--- a/BotControl.html
+++ b/BotControl.html
@@ -18,6 +18,7 @@
             </div>
 
         </div>
+        <script src="./config.js"></script>
         <script src="./adapter.js"></script>
         <script src="./jquery-1.10.2.js"></script>
         <script src="./jquery.signalR-2.2.0.js"></script>
