--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <script>
 
 
-    var ws = new WebSocket('ws://192.168.11.136:8888/ws');
+    var ws = new WebSocket('ws://' + WS_HOST + ':8888/ws');
     var $message = $('#message');
 
     ws.onopen = function(){
